[gd_scene load_steps=2 format=3 uid="uid://b10h4cfqkarf0"]

[ext_resource type="Script" path="res://game.gd" id="1_kwvvh"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kwvvh")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "combat initiation"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 36.0
offset_right = 616.0
offset_bottom = 87.0
editable = false

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -41.5
offset_right = 109.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Victory!"

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -41.5
offset_right = 109.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Defeat!"

[connection signal="defeat" from="." to="." method="_on_defeat"]
[connection signal="win" from="." to="." method="_on_win"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
